-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 17
-
Component/s: hotspot
-
b24
-
x86
runtime/CommandLine/OptionsValidation/TestOptionsWithRanges.java fails on x86_32.
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:419), pid=43339, tid=43342
# assert(left >= right) failed: avoid underflow
#
# JRE version: (17.0) (fastdebug build )
# Java VM: OpenJDK Server VM (fastdebug 17-internal+0-adhoc..jdk, mixed mode, sharing, tiered, g1 gc, linux-x86)
# Problematic frame:
# V [libjvm.so+0x1103c18] PosixSignals::pd_hotspot_signal_handler(int, siginfo_t*, ucontext_t*, JavaThread*)+0x568
#
# Core dump will be written. Default location: /home/jdk/JTwork/scratch/core.43339
#
#
--------------- S U M M A R Y ------------
Command Line: -XX:-ZapUnusedHeapArea -XX:+UseG1GC -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:UnguardOnExecutionViolation=1 optionsvalidation.JVMStartup
Host: 07b04771ecd3, Intel(R) Xeon(R) Platinum 8255C CPU @ 2.50GHz, 96 cores, 250G, Ubuntu 18.04.5 LTS
Time: Mon May 17 01:39:25 2021 UTC elapsed time: 0.008225 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0xf5717618): JavaThread "Unknown thread" [_thread_in_vm, id=43342, stack(0xf58bb000,0xf590c000)]
Stack: [0xf58bb000,0xf590c000], sp=0xf59099f0, free space=314k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1103c18] PosixSignals::pd_hotspot_signal_handler(int, siginfo_t*, ucontext_t*, JavaThread*)+0x568
V [libjvm.so+0x13722fe] JVM_handle_linux_signal+0x14e
V [libjvm.so+0x1372573] javaSignalHandler(int, siginfo_t*, void*)+0x23
Registers:
EAX=0xf774f000, EBX=0xf7479ae8, ECX=0xf5717618, EDX=0xf74eb91c
ESP=0xf59099f0, EBP=0xf5909a58, ESI=0xe659a5e6, EDI=0xe659a5e6
EIP=0xf6b1bc18, EFLAGS=0x00210213, CR2=0x00000000f774f000
```
It can be reproduced by: java -XX:UnguardOnExecutionViolation=1 on x86_32
```
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/jdk/src/hotspot/share/utilities/globalDefinitions.hpp:419), pid=43339, tid=43342
# assert(left >= right) failed: avoid underflow
#
# JRE version: (17.0) (fastdebug build )
# Java VM: OpenJDK Server VM (fastdebug 17-internal+0-adhoc..jdk, mixed mode, sharing, tiered, g1 gc, linux-x86)
# Problematic frame:
# V [libjvm.so+0x1103c18] PosixSignals::pd_hotspot_signal_handler(int, siginfo_t*, ucontext_t*, JavaThread*)+0x568
#
# Core dump will be written. Default location: /home/jdk/JTwork/scratch/core.43339
#
#
--------------- S U M M A R Y ------------
Command Line: -XX:-ZapUnusedHeapArea -XX:+UseG1GC -XX:+UnlockDiagnosticVMOptions -XX:+UnlockExperimentalVMOptions -XX:UnguardOnExecutionViolation=1 optionsvalidation.JVMStartup
Host: 07b04771ecd3, Intel(R) Xeon(R) Platinum 8255C CPU @ 2.50GHz, 96 cores, 250G, Ubuntu 18.04.5 LTS
Time: Mon May 17 01:39:25 2021 UTC elapsed time: 0.008225 seconds (0d 0h 0m 0s)
--------------- T H R E A D ---------------
Current thread (0xf5717618): JavaThread "Unknown thread" [_thread_in_vm, id=43342, stack(0xf58bb000,0xf590c000)]
Stack: [0xf58bb000,0xf590c000], sp=0xf59099f0, free space=314k
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [libjvm.so+0x1103c18] PosixSignals::pd_hotspot_signal_handler(int, siginfo_t*, ucontext_t*, JavaThread*)+0x568
V [libjvm.so+0x13722fe] JVM_handle_linux_signal+0x14e
V [libjvm.so+0x1372573] javaSignalHandler(int, siginfo_t*, void*)+0x23
Registers:
EAX=0xf774f000, EBX=0xf7479ae8, ECX=0xf5717618, EDX=0xf74eb91c
ESP=0xf59099f0, EBP=0xf5909a58, ESI=0xe659a5e6, EDI=0xe659a5e6
EIP=0xf6b1bc18, EFLAGS=0x00210213, CR2=0x00000000f774f000
```
It can be reproduced by: java -XX:UnguardOnExecutionViolation=1 on x86_32
- relates to
-
JDK-8260046 Assert left >= right in pointer_delta() methods
-
- Resolved
-