8267213: assert(left >= right) failed: avoid underflow