src/hotspot/os_cpu/linux_x86/os_linux_x86.cpp
@@ -356,8 +356,13 @@ bool PosixSignals::pd_hotspot_signal_handler(int sig, siginfo_t* info,
     // different - we still want to unguard the 2nd page in this case.
     //
     // 15 bytes seems to be a (very) safe value for max instruction size.
-    bool pc_is_near_addr =
-      (pointer_delta((void*) addr, (void*) pc, sizeof(char)) < 15);
+    bool pc_is_near_addr = false;
+    if (addr <= pc) {
+      pc_is_near_addr = pointer_delta((void*) pc, (void*) addr, sizeof(char)) < 15;
+    } else {
+      pc_is_near_addr = pointer_delta((void*) addr, (void*) pc, sizeof(char)) < 15;
+    }
+
     bool instr_spans_page_boundary =
       (align_down((intptr_t) pc ^ (intptr_t) addr,
                        (intptr_t) page_size) > 0);
